// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasePagination /> should handle "onButtonClick" prop 1`] = `
<BasePagination
  current={3}
  onButtonClick={
    [MockFunction] {
      "calls": Array [
        Array [
          2,
        ],
        Array [
          1,
        ],
        Array [
          2,
        ],
        Array [
          6,
        ],
        Array [
          100,
        ],
        Array [
          4,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  total={100}
>
  <div
    className="base-pagination-wrapper"
  >
    <PageButton
      aria-label="Назад"
      className="M-r__2"
      onClick={[Function]}
      page={2}
      rounded="all"
    >
      <button
        aria-label="Назад"
        className="page-button rounds-all M-r__2"
        onClick={[Function]}
        page={2}
      >
        <LeftSVG
          className="icon"
        >
          <svg
            className="icon"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M9.659 3.247a1 1 0 01.094 1.412L6.829 8l2.924 3.341a1 1 0 01-1.506 1.318l-3.5-4a1 1 0 010-1.317l3.5-4a1 1 0 011.412-.095z"
              fillRule="evenodd"
            />
          </svg>
        </LeftSVG>
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 1"
      key="0"
      onClick={[Function]}
      page={1}
      rounded="left"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 1"
        className="page-button rounds-left"
        onClick={[Function]}
        page={1}
      >
        1
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 2"
      key="1"
      onClick={[Function]}
      page={2}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 2"
        className="page-button"
        onClick={[Function]}
        page={2}
      >
        2
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 3"
      key="2"
      onClick={[Function]}
      page={3}
      rounded="none"
      selected={true}
    >
      <button
        aria-label="Перейти на страницу 3"
        className="page-button selected"
        onClick={[Function]}
        page={3}
      >
        3
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 4"
      key="3"
      onClick={[Function]}
      page={4}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 4"
        className="page-button"
        onClick={[Function]}
        page={4}
      >
        4
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 5"
      key="4"
      onClick={[Function]}
      page={5}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 5"
        className="page-button"
        onClick={[Function]}
        page={5}
      >
        5
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 6"
      key="5"
      onClick={[Function]}
      page={6}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 6"
        className="page-button"
        onClick={[Function]}
        page={6}
      >
        ...
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 100"
      key="6"
      onClick={[Function]}
      page={100}
      rounded="right"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 100"
        className="page-button rounds-right"
        onClick={[Function]}
        page={100}
      >
        100
      </button>
    </PageButton>
    <PageButton
      aria-label="Вперед"
      className="M-l__2"
      onClick={[Function]}
      page={4}
      rounded="all"
    >
      <button
        aria-label="Вперед"
        className="page-button rounds-all M-l__2"
        onClick={[Function]}
        page={4}
      >
        <RightSVG
          className="icon"
        >
          <svg
            className="icon"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
              fillRule="evenodd"
            />
          </svg>
        </RightSVG>
      </button>
    </PageButton>
  </div>
</BasePagination>
`;

exports[`<BasePagination /> should handle "total" and "current" props 1`] = `
<BasePagination
  current={2}
  total={100}
>
  <div
    className="base-pagination-wrapper"
  >
    <PageButton
      aria-label="Назад"
      className="M-r__2"
      onClick={[Function]}
      page={1}
      rounded="all"
    >
      <button
        aria-label="Назад"
        className="page-button rounds-all M-r__2"
        onClick={[Function]}
        page={1}
      >
        <LeftSVG
          className="icon"
        >
          <svg
            className="icon"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M9.659 3.247a1 1 0 01.094 1.412L6.829 8l2.924 3.341a1 1 0 01-1.506 1.318l-3.5-4a1 1 0 010-1.317l3.5-4a1 1 0 011.412-.095z"
              fillRule="evenodd"
            />
          </svg>
        </LeftSVG>
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 1"
      key="0"
      onClick={[Function]}
      page={1}
      rounded="left"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 1"
        className="page-button rounds-left"
        onClick={[Function]}
        page={1}
      >
        1
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 2"
      key="1"
      onClick={[Function]}
      page={2}
      rounded="none"
      selected={true}
    >
      <button
        aria-label="Перейти на страницу 2"
        className="page-button selected"
        onClick={[Function]}
        page={2}
      >
        2
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 3"
      key="2"
      onClick={[Function]}
      page={3}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 3"
        className="page-button"
        onClick={[Function]}
        page={3}
      >
        3
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 4"
      key="3"
      onClick={[Function]}
      page={4}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 4"
        className="page-button"
        onClick={[Function]}
        page={4}
      >
        4
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 5"
      key="4"
      onClick={[Function]}
      page={5}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 5"
        className="page-button"
        onClick={[Function]}
        page={5}
      >
        5
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 6"
      key="5"
      onClick={[Function]}
      page={6}
      rounded="none"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 6"
        className="page-button"
        onClick={[Function]}
        page={6}
      >
        ...
      </button>
    </PageButton>
    <PageButton
      aria-label="Перейти на страницу 100"
      key="6"
      onClick={[Function]}
      page={100}
      rounded="right"
      selected={false}
    >
      <button
        aria-label="Перейти на страницу 100"
        className="page-button rounds-right"
        onClick={[Function]}
        page={100}
      >
        100
      </button>
    </PageButton>
    <PageButton
      aria-label="Вперед"
      className="M-l__2"
      onClick={[Function]}
      page={3}
      rounded="all"
    >
      <button
        aria-label="Вперед"
        className="page-button rounds-all M-l__2"
        onClick={[Function]}
        page={3}
      >
        <RightSVG
          className="icon"
        >
          <svg
            className="icon"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <path
              clipRule="evenodd"
              d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
              fillRule="evenodd"
            />
          </svg>
        </RightSVG>
      </button>
    </PageButton>
  </div>
</BasePagination>
`;

exports[`<BasePagination /> should render without props 1`] = `
<BasePagination>
  <div
    className="base-pagination-wrapper"
  />
</BasePagination>
`;
